2007-05-07  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* appearance-main.c: (main):
	* appearance-style.c:
	* appearance-style.h:
	- Add files for Style tab
	- Implement changing gtk and metacity themes

	* appearance.glade: Change "Themes" to "Theme" and name some widgets

2007-05-07  Denis Washington  <denisw@svn.nome.org>

	* appearance.glade:
	* appearance-desktop.c: (desktop_init):
	Changed "Add" button in Desktop tab to "Add...".

2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance-main.c: (main):
	* appearance.glade:

	- Change GtkWindow to GtkDialog
	- Add Help and Close buttons
	- Set theme list scrolling policy to automatic

2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance.glade: Add a "Style" tab for the theme detail options

2007-05-07  Thomas Wood  <thos@gnome.org>

	* Makefile.am: Add FONT_CAPPLET_CFLAGS to INCLUDES

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): set application icon

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-appearance-properties.desktop.in.in: add a desktop file

2007-05-06  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: make the Add Wallpaper and Remove buttons in the
	Desktop tab stock buttons.

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* appearance.glade: more HIG and consistency fixing

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* appearance.glade: fix string capitalization according to HIG

2007-05-04  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: Change tab order; Desktop now comes before Fonts.

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-font.c:
	* appearance-font.h:
	* appearance-main.c: (init_appearance_data), (main):
	* appearance.glade:
	* appearance.h:
	* subpixel-bgr.png:
	* subpixel-rgb.png:
	* subpixel-vbgr.png:
	* subpixel-vrgb.png:

	add implementation for fonts tab
