@@ -1,5 +1,10 @@
 2007-05-07  Thomas Wood  <thos@gnome.org>
 
+	* appearance-style.c: (prepare_combo): Use GConfPropertyEditor for theme
+	combo boxes
+
+2007-05-07  Thomas Wood  <thos@gnome.org>
+
 	* Makefile.am:
 	* appearance-main.c: (main):
 	* appearance-style.c:
